# PaperAgent-RAG

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
configs/sft/: qwen2_5_vl_pdfqa.yaml
docs/: GITHUB_RELEASE.md  ROADMAP.md  SFT_PLAN.md
frontend/: index.html
frontend/assets/: app.css  app.js
scripts/: export_sft_dataset.py  launch_sft.py  split_sft_dataset.py
src/agent_rag/: __init__.py  config.py  main.py
src/agent_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_rag/api/: routes.py
src/agent_rag/data/: __init__.py  schemas.py
src/agent_rag/pipelines/: __init__.py  qa.py
src/agent_rag/services/: __init__.py  evaluate.py  generate.py  index.py  ingest.py  rerank.py  retrieve.py  storage.py
workspace_data/evaluations/: eval_20260405_130320.json
workspace_data/indices/byaldi/paper_index/: manifest.json
workspace_data/indices/byaldi/paper_index/embeddings/: embeddings_0.pt
workspace_data/metadata/: paper1.json  pdfvqa-debug-validation-0.json
workspace_data/sft/: debug_eval.jsonl  debug_export.jsonl  debug_export_filtered.jsonl  debug_train.jsonl
workspace_data/sft_runs/debug_qwen2_5_vl/: llamafactory_train.yaml
workspace_data/sft_runs/debug_qwen2_5_vl/llamafactory_data/: agent_rag_train.json  dataset_info.json
