[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rag"
version = "0.1.0"
description = "Multimodal RAG MVP scaffold for paper question answering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "byaldi>=0.0.5",
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
